test: 자동차 전진 테스트 추가